<resources>
    <string name="app_name">PracticaCocina</string>
    <string name="recipeName">Name</string>
    <string name="caloriesPerServing">Calories Per Serving</string>
    <string name="cookTimeMinutes">Cook Time Min</string>
    <string name="cuisine">Cuisine</string>
    <string name="difficulty">Difficulty</string>
    <string name="rating">Rating</string>
    <string name="prepTimeMin">Prep. Time Min</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="mealType">Meal Type</string>
    <string name="search">Search</string>
    <string name="cal_ps">Cal/Serv.</string>
    <string name="preparation">Preparation:</string>
    <string name="ingredi">Ingredients:</string>
    <string name="imagelink">Image Link</string>
    <string name="tcTime">Preparation + Cook Time</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>